--- a/BoxOffice/Resource/Info.plist
+++ b/BoxOffice/Resource/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>KobisAPIKey</key>
+	<string>$(KOBIS_REST_API_KEY)</string>
+	<key>KakaoAPIKey</key>
+	<string>KakaoAK $(KAKAO_REST_API_KEY)</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
